--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Update README
         run: |
-          curl -sS $NOW_PAGE | awk '/^---$/ {c++; if (c==2) p=1; next} p' > README.md
+          curl -sS $NOW_PAGE | awk '/<!--- content --->/{p=1;next} p' > README.md
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v7
